[package]
name = "levenshtein-diff"
license = "MIT"
version = "0.1.0"
authors = ["Mohammed Ajmal Siddiqui <ajmalsiddiqui21@gmail.com>"]
description = "Generic implementation of Levenshtein's algorithm that also allows you to generate the edits required to convert a source sequence to a target, and apply them to the source sequence to regenerate the target."
homepage = "https://github.com/ajmalsiddiqui/levenshtein-diff"
repository = "https://github.com/ajmalsiddiqui/levenshtein-diff"
keywords = ["levenshtein", "generate-differences"]
categories = ["algorithms"]
readme = "README.md"
edition = "2018"
